--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinanzApp - Iniciar Sesión</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div id="loading-screen" class="loading-screen">
         <div class="loader">
             <div class="coin">💰</div>
-            <div class="loading-text">Cargando FinanzApp...</div>
+            <div class="loading-text">Cargando...</div>
         </div>
     </div>
 
