--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -295,13 +295,13 @@
     <!-- Notification Toast -->
     <div id="toast" class="toast"></div>
 
-    <script src="/static/js/utils.js"></script>
-    <script src="/static/js/api.js"></script>
-    <script src="/static/js/navigation.js"></script>
-    <script src="/static/js/dashboard.js"></script>
-    <script src="/static/js/inversiones.js"></script>
-    <script src="/static/js/gastos.js"></script>
-    <script src="/static/js/chat.js"></script>
-    <script src="/static/js/main.js"></script>
+    <script src="../static/js/utils.js"></script>
+    <script src="../static/js/api.js"></script>
+    <script src="../static/js/navigation.js"></script>
+    <script src="../static/js/dashboard.js"></script>
+    <script src="../static/js/inversiones.js"></script>
+    <script src="../static/js/gastos.js"></script>
+    <script src="../static/js/chat.js"></script>
+    <script src="../static/js/main.js"></script>
 </body>
 </html>
