--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -83,7 +83,7 @@
     <!-- Notification Toast -->
     <div id="toast" class="toast"></div>
 
-    <script src="/static/js/utils.js"></script>
-    <script src="/static/js/register.js"></script>
+    <script src="../static/js/utils.js"></script>
+    <script src="../static/js/register.js"></script>
 </body>
 </html>
