--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -78,7 +78,7 @@
     <!-- Notification Toast -->
     <div id="toast" class="toast"></div>
 
-    <script src="/static/js/utils.js"></script>
-    <script src="/static/js/auth.js"></script>
+    <script src="../static/js/utils.js"></script>
+    <script src="../static/js/auth.js"></script>
 </body>
 </html>
