--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -73,7 +73,7 @@
                     </button>
                     
                     <div class="form-footer">
-                        <p>¿Ya tienes cuenta? <a href="/">Inicia sesión</a></p>
+                        <p>¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a></p>
                     </div>
                 </form>
             </div>
