--- a/src/templates/inversiones.html
+++ b/src/templates/inversiones.html
@@ -235,5 +235,6 @@
 
     <!-- Scripts -->
     <script src="/static/js/inversiones.js"></script>
+    <script src="/static/js/chat.js"></script>
 </body>
 </html>
