--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -22,7 +22,7 @@
             <div class="brand-section">
                 <div class="logo-animated">
                     <span class="logo-icon">💎</span>
-                    <h1 class="brand-name">FinanzApp</h1>
+                    <h1 class="brand-name">Smart Finance</h1>
                 </div>
                 <p class="brand-tagline">Tu futuro financiero comienza aquí</p>
                 <div class="features-list">
